kubernetes/argocd/apps/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app-ingress: ""
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    app.kubernetes.io/instance: argocd
    kubernetes.io/metadata.name: argocd-apps
    openshift.io/cluster-monitoring: "true"
    ca-bundle: "true"
  name: argocd-apps
